# learn_opengl

./: CMakeLists.txt  README.md  main.cpp
shaders/: fragmentShaderTriangle.glsl
src/: Application.cpp  Application.h  DrawableObject.cpp  DrawableObject.h  Model.cpp  Model.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Transformation.cpp  Transformation.h
